--- a/src/window.ui
+++ b/src/window.ui
@@ -3,29 +3,80 @@
   <requires lib="gtk" version="4.0"/>
   <requires lib="libadwaita" version="1.0"/>
   <template class="SkeletonWindow" parent="AdwApplicationWindow">
+    <property name="title" translatable="yes">Polyphony</property>
     <property name="default-width">411</property>
     <property name="default-height">823</property>
     <child>
       <object class="GtkBox">
         <property name="orientation">vertical</property>
         <child>
-          <object class="AdwHeaderBar" id="header_bar">
-              <property name="title-widget">
+          <object class="AdwHeaderBar">
+            <property name="title-widget">
                 <object class="GtkSearchEntry">
                   <property name="width-request">267</property>
                 </object>
-              </property>
-              <child type="start">
-                <object class="GtkToggleButton">
-                    <property name="icon-name">sidebar-toggle-left-symbolic</property>
-                </object>
-              </child>
-              <child type="end">
+            </property>
+            <child type="start">
+              <object class="GtkToggleButton" id="reveal_btn">
+                <property name="icon-name">sidebar-toggle-left-symbolic</property>
+                <property name="active" bind-source="sidebar" bind-property="reveal-flap" bind-flags="sync-create|bidirectional"/>
+              </object>
+            </child>
+            <child type="end">
                 <object class="GtkMenuButton">
                     <property name="icon-name">open-menu-symbolic</property>
-                    <property name="menu-model">primary_menu</property>
+                    <!-- <property name="menu-model">primary_menu</property> -->
                 </object>
-              </child>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="AdwFlap" id="sidebar">
+            <property name="vexpand">True</property>
+            <property name="locked" bind-source="locked_switch" bind-property="active" bind-flags="sync-create"/>
+            <property name="modal" bind-source="modal_switch" bind-property="active" bind-flags="sync-create"/>
+            <property name="swipe-to-open" bind-source="swipe_to_open_switch" bind-property="active" bind-flags="sync-create"/>
+            <property name="swipe-to-close" bind-source="swipe_to_close_switch" bind-property="active" bind-flags="sync-create"/>
+            <property name="flap">
+              <object class="GtkStackSidebar">
+                <property name="stack">stack</property>
+                <property name="width-request">200</property>
+              </object>
+            </property>
+            <property name="separator">
+              <object class="GtkSeparator">
+                <style>
+                  <class name="sidebar"/>
+                </style>
+              </object>
+            </property>
+            <property name="content">
+              <object class="GtkStack" id="stack">
+                <property name="vexpand">True</property>
+                <property name="width-request">360</property>
+                <signal name="notify::visible-child" handler="stack_notify_visible_child_cb" swapped="true"/>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="title" translatable="yes">Home</property>
+                    <property name="child">
+                        <object class="GtkLabel">
+                          <property name="label">Home</property>
+                      </object>
+                    </property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="title" translatable="yes">Explore</property>
+                    <property name="child">
+                      <object class="GtkLabel">
+                          <property name="label">Explore</property>
+                      </object>
+                    </property>
+                  </object>
+                </child>
+              </object>
+            </property>
           </object>
         </child>
       </object>
